--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.75.1",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.3.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
